extract handcrafted code into separate source root from code being generated enforce java 1.4 compatibility